# wincam

./: .gitignore  LICENSE  README.md  build.cmd  flint.cmd  manifest.in  publish.cmd  pyproject.toml
examples/: common.py  mirror.py  video.py  video_meta.json
notebooks/: plot_video_ticks.ipynb
src/: ScreenCapture.sln  build.cmd
src/CppUnitTest/: CppUnitTest.cpp  CppUnitTest.vcxproj  CppUnitTest.vcxproj.filters
src/ScreenCapture/: Errors.h  FFmpegEncoder.cpp  FFmpegEncoder.h  FpsThrottle.h  ScreenCapture.cpp  ScreenCapture.h  ScreenCapture.vcxproj  ScreenCapture.vcxproj.filters  ScreenCaptureApi.cpp  SimpleCapture.cpp  SimpleCapture.h  Timer.cpp  Timer.h  UnicodeFile.h  VideoEncoder.cpp  VideoEncoder.h  WindowsEncoder.cpp  WindowsEncoder.h  pch.h
src/ScreenRecorder.Net/: Capture.cs  Ffmpeg.cs  FileHelpers.cs  ICapture.cs  NativeMethods.cs  PerfTimer.cs  ScreenRecorder.Net.csproj  ScreenRecorder.Net.nuspec  ScreenRecorder.Net.sln  Throttle.cs  User32.cs  readme.md
src/WpfTestApp/: App.xaml.cs  CalibrationView.xaml  CalibrationView.xaml.cs  Capture.cs  ColorPalette.cs  DelayedAction.cs  Ffmpeg.cs  FileHelpers.cs  ICapture.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  PerfTimer.cs  Shell32.cs  Throttle.cs  UiDispatcher.cs  User32.cs  WpfTestApp.csproj  XamlExtensions.cs
src/WpfTestApp/Properties/: launchSettings.json
tests/: test_throttle.py
wincam/: __init__.py  camera.py  desktop.py  dxcam.py  logger.py  native.py  throttle.py  timer.py  wincam - Shortcut.lnk
wincam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
