# inform pip to use setuptools
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# project metadata
[project]
name = "wincam"
version = "1.0.7"
authors = [
    {name = "lovettchris"}
]
description = "A Python high-performance screenshot library for Windows 10+ using Direct3D11CaptureFramePool."
readme = "README.md"

requires-python = ">=3.10"

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture"
]

dependencies = [
    "opencv-contrib-python",
    "numpy",
    "pywin32; sys_platform == 'win32'"
]

[project.optional-dependencies]
dev = [
    "build",
    "black",
    "isort",
    "flake8",
    "Flake8-pyproject",
    "mypy",
    "mypy-extensions",
    "types-PyYAML",
]
test = [
    "pytest==7.3.1",
]

all = ["wincam[dev,test]"]

[project.urls]
Homepage = "https://github.com/lovettchris/wincam"
Issues = "https://github.com/lovettchris/wincam/issues"

[tool.setuptools.packages]
find = {}

# Formatting settings (also used by pre-commit)
[tool.black]
line-length = 120

[tool.flake8]
ignore = "E203, E111,E402,E722,W503,W504,F405,F403"
max-line-length = 120
max-complexity = 45

[tool.isort]
profile = "black"
src_paths = ["wincam"]
force_sort_within_sections = true
force_alphabetical_sort_within_sections = true

[tool.mypy]
ignore_missing_imports = true
strict_optional = false

[tool.mypy-yaml]
ignore_missing_imports = true
